Beveled curves geometry contains duplicate vertices #71200

Closed
opened 2019-10-29 18:26:03 +01:00 by Humberto · 5 comments

This bug report has been made into a TODO, since it's a known limitation which would be good to address.

Currently the resulting surfaces from beveled curves contain duplicate vertices and edges along seams.

We could share vertices between these surfaces to avoid problems like the one from this report, where modifiers don't handle duplicate geometry very well.

See the example below.


System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20

Blender Version
Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-10-28 18:34, hash: 7c1fbe24ca
Worked: (optional)

Short description of error
When having a BezierCurve with a "Extrude" and a "Depth" value and you add a Solidify Modifier to it, you will get an error in the geometry between the straight surface and the radius. It is either intersecting geometry or a gap.

Exact steps for others to reproduce the error
Add BezierCurve . Give some value to "Extrude" and "Depth" in the object properties panel. Add a Solidify Modifer.
Please see attached .blend file.

spline_thickness.blend

This bug report has been made into a TODO, since it's a known limitation which would be good to address. Currently the resulting surfaces from beveled curves contain duplicate vertices and edges along seams. We could share vertices between these surfaces to avoid problems like the one from this report, where modifiers don't handle duplicate geometry very well. See the example below. ---- **System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 455 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.11.20 **Blender Version** Broken: version: 2.81 (sub 16), branch: master, commit date: 2019-10-28 18:34, hash: `7c1fbe24ca` Worked: (optional) **Short description of error** When having a BezierCurve with a "Extrude" and a "Depth" value and you add a Solidify Modifier to it, you will get an error in the geometry between the straight surface and the radius. It is either intersecting geometry or a gap. **Exact steps for others to reproduce the error** Add BezierCurve . Give some value to "Extrude" and "Depth" in the object properties panel. Add a Solidify Modifer. Please see attached .blend file. [spline_thickness.blend](https://archive.blender.org/developer/F7869848/spline_thickness.blend)
Author

Added subscriber: @Hum-Bee-2

Added subscriber: @Hum-Bee-2
Campbell Barton changed title from Geometry error with Solidify Modifier on a BezierCurve to Beveled curves geometry contains duplicate vertices 2019-10-29 18:55:42 +01:00

Added subscriber: @Xdzackycatxd

Added subscriber: @Xdzackycatxd

Hi I’m zack and I’m 9 years old

Hi I’m zack and I’m 9 years old

This issue was referenced by e34d3e32dd

This issue was referenced by e34d3e32dda7cbee86027819505f782eeee3a1a5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-01-13 18:30:20 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71200
No description provided.